✨ Добавлен сервис dickobrazz в docker-compose.yaml с полной конфигурацией и параметрами окружения

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,37 +4,37 @@ networks:
     external: true
     name: infra
 services:
-  # dickobrazz:
-  #   image: ghcr.io/MairwunNx/dickobrazz:1.22.0
-  #   command: ["/usr/local/bin/dickobrazz"]
-  #   container_name: dickobrazz-bot
-  #   cpus: '0.25'
-  #   depends_on: [ dickobrazz-redis, dickobrazz-mongo ]
-  #   environment:
-  #     DD_DB_HOST: dickobrazz-mongo
-  #     MONGODB_URI: ${MONGODB_URI}
-  #     MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
-  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-  #     RANDOMORG_TOKEN: ${RANDOMORG_TOKEN}
-  #     REDIS_ADDRESS: ${REDIS_ADDRESS}
-  #     REDIS_PASSWORD: ${REDIS_PASSWORD}
-  #     TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
-  #   healthcheck:
-  #     interval: 30s
-  #     retries: 3
-  #     start_period: 40s
-  #     test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-  #     timeout: 10s
-  #   logging:
-  #     driver: local
-  #     options:
-  #       max-file: '3'
-  #       max-size: 10m
-  #   mem_limit: 256m
-  #   mem_reservation: 64m
-  #   networks: [ infra ]
-  #   restart: unless-stopped
+  dickobrazz:
+    image: ghcr.io/MairwunNx/dickobrazz:1.22.0
+    command: ["/usr/local/bin/dickobrazz"]
+    container_name: dickobrazz-bot
+    cpus: '0.25'
+    depends_on: [ dickobrazz-redis, dickobrazz-mongo ]
+    environment:
+      DD_DB_HOST: dickobrazz-mongo
+      MONGODB_URI: ${MONGODB_URI}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      RANDOMORG_TOKEN: ${RANDOMORG_TOKEN}
+      REDIS_ADDRESS: ${REDIS_ADDRESS}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
+    healthcheck:
+      interval: 30s
+      retries: 3
+      start_period: 40s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      timeout: 10s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 256m
+    mem_reservation: 64m
+    networks: [ infra ]
+    restart: unless-stopped
   dickobrazz-mongo:
     command: ["--wiredTigerCacheSizeGB", "0.25"]
     container_name: dickobrazz-mongo
