--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,40 +3,78 @@ networks:
   infra:
     external: true
     name: infra
+x-backup-common-env: &backup-common-env
+  TZ: ${TZ}
+  AWS_ENDPOINT: ${AWS_ENDPOINT}
+  AWS_ENDPOINT_PROTO: ${AWS_ENDPOINT_PROTO}
+  AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
+  AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+  AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+  BACKUP_CRON_EXPRESSION: ${BACKUP_CRON_EXPRESSION}
+  BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS}
 services:
-  dickobrazz:
-    image: ghcr.io/mairwunnx/dickobrazz:1.30.2
-    command: ["/usr/local/bin/dickobrazz"]
-    container_name: dickobrazz-bot
+  dickobrazz-server:
+    image: ghcr.io/mairwunnx-infra/dickobrazz-server:1.0.0
+    container_name: dickobrazz-server
     cpus: '0.25'
     depends_on: [ dickobrazz-redis, dickobrazz-mongo ]
     environment:
-      DD_DB_HOST: dickobrazz-mongo
-      MONGODB_URI: ${MONGODB_URI}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_URL: ${MONGO_URL}
+      REDIS_URL: ${REDIS_URL}
       RANDOMORG_TOKEN: ${RANDOMORG_TOKEN}
-      REDIS_ADDRESS: ${REDIS_ADDRESS}
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
-      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
+      CROSS_SERVER_TOKEN: ${CROSS_SERVER_TOKEN}
+      SESSION_SECRET: ${SESSION_SECRET}
+      SESSION_TTL_SEC: ${SESSION_TTL_SEC}
+      TZ: ${TZ}
     healthcheck:
       interval: 30s
       retries: 3
-      start_period: 40s
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      start_period: 20s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3030/api/health"]
       timeout: 10s
     logging:
       driver: local
       options:
         max-file: '3'
         max-size: 10m
-    mem_limit: 256m
+    mem_limit: 128m
     mem_reservation: 64m
+    networks: [ infra ]
+    expose: [ "3030" ]
+    restart: unless-stopped
+  dickobrazz-bot:
+    image: ghcr.io/mairwunnx-infra/dickobrazz-bot:1.34.0
+    container_name: dickobrazz-bot
+    cpus: '0.15'
+    depends_on: [ dickobrazz-server ]
+    environment:
+      CROSS_SERVER_TOKEN: ${CROSS_SERVER_TOKEN}
+      BOT_TG_TOKEN: ${BOT_TG_TOKEN}
+      TZ: ${TZ}
+    healthcheck:
+      interval: 30s
+      retries: 3
+      start_period: 40s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      timeout: 10s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 64m
+    mem_reservation: 32m
     networks: [ infra ]
     restart: unless-stopped
   dickobrazz-mongo:
-    command: ["--wiredTigerCacheSizeGB", "0.25"]
+    command:
+      - "--wiredTigerCacheSizeGB"
+      - "0.25"
+      - "--wiredTigerCollectionBlockCompressor"
+      - "zstd"
+      - "--wiredTigerIndexPrefixCompression"
+      - "true"
+      - "--quiet"
     container_name: dickobrazz-mongo
     cpus: '0.5'
     environment:
@@ -56,8 +94,8 @@ services:
       options:
         max-file: '3'
         max-size: 10m
-    mem_limit: 512m
-    mem_reservation: 256m
+    mem_limit: 384m
+    mem_reservation: 192m
     networks: [ infra ]
     expose: [ "27017" ]
     restart: unless-stopped
@@ -93,21 +131,132 @@ services:
     restart: unless-stopped
     volumes:
       - dickobrazz-redis-data:/data
+  dickobrazz-server-test:
+    image: ghcr.io/mairwunnx-infra/dickobrazz-server-test:1.0.0
+    container_name: dickobrazz-server-test
+    cpus: '0.25'
+    depends_on: [ dickobrazz-redis-test, dickobrazz-mongo-test ]
+    environment:
+      TEST_MONGO_URL: ${TEST_MONGO_URL}
+      TEST_REDIS_URL: ${TEST_REDIS_URL}
+      RANDOMORG_TOKEN: ${RANDOMORG_TOKEN}
+      TEST_CROSS_SERVER_TOKEN: ${TEST_CROSS_SERVER_TOKEN}
+      TEST_SESSION_SECRET: ${TEST_SESSION_SECRET}
+      SESSION_TTL_SEC: ${SESSION_TTL_SEC}
+      TZ: ${TZ}
+    healthcheck:
+      interval: 30s
+      retries: 3
+      start_period: 20s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3030/api/health"]
+      timeout: 10s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 128m
+    mem_reservation: 64m
+    networks: [ infra ]
+    expose: [ "3030" ]
+    restart: unless-stopped
+  dickobrazz-bot-test:
+    image: ghcr.io/mairwunnx-infra/dickobrazz-bot-test:1.34.0
+    container_name: dickobrazz-bot-test
+    cpus: '0.15'
+    depends_on: [ dickobrazz-server-test ]
+    environment:
+      TEST_CROSS_SERVER_TOKEN: ${TEST_CROSS_SERVER_TOKEN}
+      TEST_BOT_TG_TOKEN: ${TEST_BOT_TG_TOKEN}
+      TZ: ${TZ}
+    healthcheck:
+      interval: 30s
+      retries: 3
+      start_period: 40s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      timeout: 10s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 64m
+    mem_reservation: 32m
+    networks: [ infra ]
+    restart: unless-stopped
+  dickobrazz-mongo-test:
+    command:
+      - "--wiredTigerCacheSizeGB"
+      - "0.25"
+      - "--wiredTigerCollectionBlockCompressor"
+      - "zstd"
+      - "--wiredTigerIndexPrefixCompression"
+      - "true"
+      - "--quiet"
+    container_name: dickobrazz-mongo-test
+    cpus: '0.5'
+    environment:
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_PASSWORD: ${TEST_MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${TEST_MONGO_INITDB_ROOT_USERNAME}
+      TZ: ${TZ}
+    healthcheck:
+      interval: 15s
+      retries: 12
+      start_period: 60s
+      test: ["CMD-SHELL", "mongosh --eval 'db.runCommand(\"ping\")' --quiet | grep -q 1"]
+      timeout: 5s
+    image: mongo:8.2.2
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 384m
+    mem_reservation: 192m
+    networks: [ infra ]
+    expose: [ "27017" ]
+    restart: unless-stopped
+    volumes:
+      - dickobrazz-mongo-test-data:/data/db
+  dickobrazz-redis-test:
+    command: >
+      redis-server --port 6379
+      --loglevel warning
+      --save 20 1
+      --requirepass ${TEST_REDIS_PASSWORD}
+    container_name: dickobrazz-redis-test
+    cpus: '0.5'
+    environment:
+      REDIS_PASSWORD: ${TEST_REDIS_PASSWORD}
+      TZ: ${TZ}
+    healthcheck:
+      interval: 10s
+      retries: 3
+      start_period: 10s
+      test: ["CMD", "sh", "-c", "redis-cli -a ${TEST_REDIS_PASSWORD} --no-auth-warning ping"]
+      timeout: 5s
+    image: redis:8.4-alpine
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 256m
+    mem_reservation: 128m
+    networks: [ infra ]
+    expose: [ "6379" ]
+    restart: unless-stopped
+    volumes:
+      - dickobrazz-redis-test-data:/data
   backup-dickobrazz-mongo:
     image: offen/docker-volume-backup:v2
     container_name: backup-dickobrazz-mongo
     environment:
-      TZ: ${TZ}
-      AWS_ENDPOINT: ${AWS_ENDPOINT}
-      AWS_ENDPOINT_PROTO: ${AWS_ENDPOINT_PROTO}
-      AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
-      AWS_S3_PATH: ${AWS_S3_DEPLOYMENTS_DICKOBRAZZ_MONGO_PATH}
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      BACKUP_CRON_EXPRESSION: ${BACKUP_CRON_EXPRESSION}
-      BACKUP_FILENAME: ${BACKUP_DEPLOYMENTS_DICKOBRAZZ_MONGO_FILENAME}
-      BACKUP_PRUNING_PREFIX: ${BACKUP_DEPLOYMENTS_DICKOBRAZZ_MONGO_PRUNING_PREFIX}
-      BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS}
+      <<: *backup-common-env
+      AWS_S3_PATH: backups/${STACK_SLUG:-dickobrazz}/mongo
+      BACKUP_FILENAME: mongo-%Y%m%dT%H%M%S.tar.gz
+      BACKUP_PRUNING_PREFIX: mongo-
     volumes:
       - dickobrazz-mongo-data:/backup/dickobrazz/mongo:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -117,17 +266,10 @@ services:
     image: offen/docker-volume-backup:v2
     container_name: backup-dickobrazz-redis
     environment:
-      TZ: ${TZ}
-      AWS_ENDPOINT: ${AWS_ENDPOINT}
-      AWS_ENDPOINT_PROTO: ${AWS_ENDPOINT_PROTO}
-      AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
-      AWS_S3_PATH: ${AWS_S3_DEPLOYMENTS_DICKOBRAZZ_REDIS_PATH}
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      BACKUP_CRON_EXPRESSION: ${BACKUP_CRON_EXPRESSION}
-      BACKUP_FILENAME: ${BACKUP_DEPLOYMENTS_DICKOBRAZZ_REDIS_FILENAME}
-      BACKUP_PRUNING_PREFIX: ${BACKUP_DEPLOYMENTS_DICKOBRAZZ_REDIS_PRUNING_PREFIX}
-      BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS}
+      <<: *backup-common-env
+      AWS_S3_PATH: backups/${STACK_SLUG:-dickobrazz}/redis
+      BACKUP_FILENAME: redis-%Y%m%dT%H%M%S.tar.gz
+      BACKUP_PRUNING_PREFIX: redis-
     volumes:
       - dickobrazz-redis-data:/backup/dickobrazz/redis:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -137,4 +279,8 @@ volumes:
   dickobrazz-mongo-data:
     driver: local
   dickobrazz-redis-data:
+    driver: local
+  dickobrazz-mongo-test-data:
+    driver: local
+  dickobrazz-redis-test-data:
     driver: local
