Add comments for Grafana admin user and password in .env.sample file for clarity

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 TZ=Europe/Moscow
+GF_SECURITY_ADMIN_USER=# логин администратора Grafana
+GF_SECURITY_ADMIN_PASSWORD=# пароль администратора Grafana
 
 BOT_TG_TOKEN=# токен production-бота из @BotFather
 TEST_BOT_TG_TOKEN=# токен test-бота из @BotFather
