Add Prometheus and Grafana services to docker-compose.yaml with health checks, resource limits, and backup configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -249,6 +249,70 @@ services:
     restart: unless-stopped
     volumes:
       - dickobrazz-redis-test-data:/data
+  dickobrazz-prometheus:
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    image: ghcr.io/mairwunnx-infra/dickobrazz-prometheus:2.55.1
+    container_name: dickobrazz-prometheus
+    cpus: '0.2'
+    depends_on:
+      dickobrazz-bot:
+        condition: service_healthy
+      dickobrazz-server:
+        condition: service_healthy
+    environment:
+      TZ: ${TZ}
+    expose: [ "9090" ]
+    healthcheck:
+      interval: 10s
+      retries: 6
+      start_period: 10s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/-/ready"]
+      timeout: 5s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 192m
+    mem_reservation: 96m
+    networks: [ infra ]
+    restart: unless-stopped
+    volumes:
+      - dickobrazz-prometheus-data:/prometheus
+  dickobrazz-grafana:
+    image: ghcr.io/mairwunnx-infra/dickobrazz-grafana:11.5.0
+    container_name: dickobrazz-grafana
+    cpus: '0.2'
+    depends_on:
+      dickobrazz-prometheus:
+        condition: service_healthy
+    environment:
+      TZ: ${TZ}
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
+    expose: [ "3000" ]
+    healthcheck:
+      interval: 10s
+      retries: 20
+      start_period: 30s
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      timeout: 5s
+    logging:
+      driver: local
+      options:
+        max-file: '3'
+        max-size: 10m
+    mem_limit: 192m
+    mem_reservation: 96m
+    networks: [ infra ]
+    restart: unless-stopped
+    volumes:
+      - dickobrazz-grafana-data:/var/lib/grafana
   backup-dickobrazz-mongo:
     image: offen/docker-volume-backup:v2
     container_name: backup-dickobrazz-mongo
@@ -275,6 +339,19 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks: [infra]
     restart: unless-stopped
+  backup-dickobrazz-prometheus:
+    image: offen/docker-volume-backup:v2
+    container_name: backup-dickobrazz-prometheus
+    environment:
+      <<: *backup-common-env
+      AWS_S3_PATH: backups/${STACK_SLUG:-dickobrazz}/prometheus
+      BACKUP_FILENAME: prometheus-%Y%m%dT%H%M%S.tar.gz
+      BACKUP_PRUNING_PREFIX: prometheus-
+    volumes:
+      - dickobrazz-prometheus-data:/backup/dickobrazz/prometheus:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks: [infra]
+    restart: unless-stopped
 volumes:
   dickobrazz-mongo-data:
     driver: local
@@ -283,4 +360,8 @@ volumes:
   dickobrazz-mongo-test-data:
     driver: local
   dickobrazz-redis-test-data:
+    driver: local
+  dickobrazz-prometheus-data:
+    driver: local
+  dickobrazz-grafana-data:
     driver: local
