--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
     mem_reservation: 64m
     networks: [ infra ]
     expose: [ "3030" ]
-    restart: unless-stopped
+    restart: "no"
   dickobrazz-bot:
     image: ghcr.io/mairwunnx-infra/dickobrazz-bot:1.34.2
     container_name: dickobrazz-bot
@@ -157,7 +157,7 @@ services:
     mem_reservation: 64m
     networks: [ infra ]
     expose: [ "3030" ]
-    restart: unless-stopped
+    restart: "no"
   dickobrazz-bot-test:
     image: ghcr.io/mairwunnx-infra/dickobrazz-bot-test:1.34.2
     container_name: dickobrazz-bot-test
