--- a/configurations/prometheus/prometheus.yml
+++ b/configurations/prometheus/prometheus.yml
@@ -13,6 +13,6 @@ scrape_configs:
       - targets: ["dickobrazz-bot:9091"]
 
   - job_name: "dickobrazz-server"
-    metrics_path: /api/metrics
+    metrics_path: /metrics
     static_configs:
       - targets: ["dickobrazz-server:3030"]
