--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ x-backup-common-env: &backup-common-env
   BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS}
 services:
   dickobrazz-server:
-    image: ghcr.io/mairwunnx-infra/dickobrazz-server:1.0.6
+    image: ghcr.io/mairwunnx-infra/dickobrazz-server:1.0.6-1
     container_name: dickobrazz-server
     cpus: '0.25'
     depends_on: [ dickobrazz-redis, dickobrazz-mongo ]
@@ -43,7 +43,7 @@ services:
     expose: [ "3030" ]
     restart: unless-stopped
   dickobrazz-bot:
-    image: ghcr.io/mairwunnx-infra/dickobrazz-bot:1.34.3
+    image: ghcr.io/mairwunnx-infra/dickobrazz-bot:1.34.3-1
     container_name: dickobrazz-bot
     cpus: '0.15'
     depends_on: [ dickobrazz-server ]
@@ -132,7 +132,7 @@ services:
     volumes:
       - dickobrazz-redis-data:/data
   dickobrazz-server-test:
-    image: ghcr.io/mairwunnx-infra/dickobrazz-server-test:1.0.6
+    image: ghcr.io/mairwunnx-infra/dickobrazz-server-test:1.0.6-1
     container_name: dickobrazz-server-test
     cpus: '0.25'
     depends_on: [ dickobrazz-redis-test, dickobrazz-mongo-test ]
@@ -161,7 +161,7 @@ services:
     expose: [ "3030" ]
     restart: unless-stopped
   dickobrazz-bot-test:
-    image: ghcr.io/mairwunnx-infra/dickobrazz-bot-test:1.34.3
+    image: ghcr.io/mairwunnx-infra/dickobrazz-bot-test:1.34.3-1
     container_name: dickobrazz-bot-test
     cpus: '0.15'
     depends_on: [ dickobrazz-server-test ]
